Introduce `invokeSuperConstructor` that should replace `invokeConstructor`